<resources>
    <string name="app_name">VLADOSIYS</string>
    <string name="pivo">Пивас</string>
    <string name="sidr">Сидр</string>
    <string name="medovyha">Медовуха</string>
    <string name="lager">Лагер</string>
    <string name="el">Эль</string>
    <string name="goBack">goBack</string>
    <string name="nego">негативные</string>
    <string name="info">info</string>
    <string name="plus">полезные</string>
    <string name="pivas_info">Пиво – древнейший алкогольный напиток, известный человечеству. Его получают путем сбраживания сусла, обычно из злаков, хмеля и воды. Поскольку брожение может возникнуть в любом органическом продукте, содержащем сахар или крахмал, возможно, что ранние пивные напитки были сварены независимо друг от друга в разных очагах человеческой цивилизации.</string>
    <string name="sidr_info">Напиток, полученный путем брожения, обладающий приятным фруктовым вкусом и ароматом, называют сидром. Его готовят из разных фруктов, итальянцы даже добавляют различные специи и травы. Классическим вариантом напитка считается именно яблочный сидр.</string>
    <string name="med_info">В старину, задолго до появления водки и других крепких спиртных напитков, на Руси были распространены хмельные напитки из меда. И хотя само слово «медовуха» появилось сравнительно недавно, традиции приготовления этого напитка уходят корнями в глубокую древность.</string>
    <string name="ele_info">Эль – вид пива, который получают путем быстрого брожения. В отличие от лагера, для приготовления эля нужно меньше времени, к тому же эль получается более сладким. Приготовление такого напитка занимает 3-4 недели, некоторые виды готовятся на протяжении 4-х месяцев. Напиток также меняет свой вкус в зависимости от времени хранения. Выдержанный в течение нескольких недель, он напоминает по вкусу молодое пиво с резким вкусом, а вот эль, выдержанный несколько месяцев, имеет приятный травяной привкус. Чтобы увеличить крепость эля, его достаточно хранить месяц при комнатной температуре. Любители пива уверяют, что такое хранение делает напиток еще вкуснее. Эль представляет собой очень древний напиток. Его умели варить еще шумеры, правда, они не добавляли в него хмель, в связи с чем на его приготовление уходило очень мало времени. Первое упоминание о хмельном эле впервые было найдено в Англии уже в XV веке. Название «эль» имеет праиндоевропейские корни и буквально означает «опьянение».</string>
    <string name="lager_info">Все виды пива можно разделить на две группы: низового и верхового брожения. Лагер относится к первой группе: это пиво бродит при температуре от 5 до 15 градусов, а в некоторых случаях даже при 0, тогда как пиво верхнего бродит при 15-25.</string>
</resources>