<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/oval_radius"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="314dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/button11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:onClick="bd"
                android:text="Регистрация"
                android:textSize="30sp"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="242dp"
                android:layout_marginTop="36dp"
                android:onClick="FitBackRazrab"
                android:src="@drawable/img" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button5"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:onClick="klap"
                android:text="@string/pivo"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_marginStart="20dp"
                android:layout_gravity="center"
                android:onClick="sidr"
                android:text="@string/sidr"
                android:textSize="30sp" />
        </LinearLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:onClick="medovyx"
            android:text="@string/medovyha"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:onClick="lager"
            android:text="@string/lager"
            android:textSize="30sp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:onClick="ele"
            android:text="@string/el"
            android:textSize="30sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>