<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sidr"
    android:background="@drawable/oval_radius">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/oval_radius"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">


        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="10dp"
            android:onClick="goBack"
            android:src="@drawable/img_2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="СИДР"
            android:textSize="20sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="408dp"
        android:layout_height="688dp"
        android:orientation="vertical"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="324dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:rotation="21"
            android:src="@drawable/img_5" />

        <ScrollView
            android:id="@+id/SCROLLER_ID"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:background="@drawable/text_prikol"
            android:fillViewport="true"
            android:padding="5dp"
            android:scrollbars="vertical"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp">

            <TextView
                android:id="@+id/text_str"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15sp"
                android:text="@string/sidr_info"
                android:textSize="20sp" />
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:background="@drawable/oval_radius"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:onClick="polez"
            android:textSize="13sp"
            android:text="@string/plus" />

        <View
            android:layout_width="5dp"
            android:background="@drawable/lain"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="5sp"/>

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/info"
            android:onClick="info"
            android:layout_gravity="center"
            />

        <View
            android:layout_width="5dp"
            android:background="@drawable/lain"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="5sp"/>

        <Button
            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nego"
            android:layout_gravity="center"
            android:onClick="vred"
            android:layout_marginRight="5dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>